// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllPlacements 1`] = `
<div>
  <div
    class="mb-12"
  >
    <span
      class="cursor-pointer"
    >
      top
    </span>
  </div>
  <div
    class="mb-12"
  >
    <span
      class="cursor-pointer"
    >
      bottom
    </span>
  </div>
  <div
    class="mb-12"
  >
    <span
      class="cursor-pointer"
    >
      left
    </span>
  </div>
  <div
    class="mb-12"
  >
    <span
      class="cursor-pointer"
    >
      right
    </span>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <span
    class="cursor-pointer"
  >
    hover me
  </span>
</div>
`;
